hope I do not overwrite

--- a/UCI_Calendars/UCI-Calendars.ipynb
+++ b/UCI_Calendars/UCI-Calendars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,136 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date From</th>\n",
-       "      <th>Date To</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Venue</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Category</th>\n",
-       "      <th>Calendar</th>\n",
-       "      <th>Class</th>\n",
-       "      <th>EMail</th>\n",
-       "      <th>WebSite</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>29/10/2018</td>\n",
-       "      <td>29/10/2018</td>\n",
-       "      <td>Gran Premio ICODER</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>COSTA RICA</td>\n",
-       "      <td>WE</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>fecoci@fecoci.net</td>\n",
-       "      <td>www.fecoci.net</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>30/10/2018</td>\n",
-       "      <td>30/10/2018</td>\n",
-       "      <td>Gran Premio Comite Olimpico Nacional Femenino</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>COSTA RICA</td>\n",
-       "      <td>WE</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>fecoci@fecoci.net</td>\n",
-       "      <td>www.fecoci.net</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>23/10/2018</td>\n",
-       "      <td>31/10/2018</td>\n",
-       "      <td>Tour of Hainan</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PEOPLE'S REPUBLIC OF CHINA</td>\n",
-       "      <td>ME</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.HC</td>\n",
-       "      <td>tourofhainan@163.com</td>\n",
-       "      <td>www.tourofhainan.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>23/10/2018</td>\n",
-       "      <td>01/11/2018</td>\n",
-       "      <td>58 Vuelta a Guatemala</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>GUATEMALA</td>\n",
-       "      <td>ME</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>fciclismo.guatemala@gmail.com</td>\n",
-       "      <td>www.fedeciclismogua.org</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>26/10/2018</td>\n",
-       "      <td>04/11/2018</td>\n",
-       "      <td>Tour du Faso</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>BURKINA FASO</td>\n",
-       "      <td>ME</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>sawadogobruno@yahoo.fr</td>\n",
-       "      <td>www.tourdufaso.bf</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "    Date From     Date To                                           Name  \\\n",
-       "0  29/10/2018  29/10/2018                             Gran Premio ICODER   \n",
-       "1  30/10/2018  30/10/2018  Gran Premio Comite Olimpico Nacional Femenino   \n",
-       "2  23/10/2018  31/10/2018                                 Tour of Hainan   \n",
-       "3  23/10/2018  01/11/2018                          58 Vuelta a Guatemala   \n",
-       "4  26/10/2018  04/11/2018                                   Tour du Faso   \n",
-       "\n",
-       "  Venue                     Country Category  Calendar Class  \\\n",
-       "0   NaN                  COSTA RICA       WE       NaN   1.2   \n",
-       "1   NaN                  COSTA RICA       WE       NaN   1.2   \n",
-       "2   NaN  PEOPLE'S REPUBLIC OF CHINA       ME       NaN  2.HC   \n",
-       "3   NaN                   GUATEMALA       ME       NaN   2.2   \n",
-       "4   NaN                BURKINA FASO       ME       NaN   2.2   \n",
-       "\n",
-       "                           EMail                  WebSite  \n",
-       "0              fecoci@fecoci.net           www.fecoci.net  \n",
-       "1              fecoci@fecoci.net           www.fecoci.net  \n",
-       "2           tourofhainan@163.com     www.tourofhainan.com  \n",
-       "3  fciclismo.guatemala@gmail.com  www.fedeciclismogua.org  \n",
-       "4         sawadogobruno@yahoo.fr        www.tourdufaso.bf  "
+       "7985"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +171,7 @@
        "4                BURKINA FASO       ME   2.2  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -356,10 +236,10 @@
        "      <th>Country</th>\n",
        "      <th>Category</th>\n",
        "      <th>Class</th>\n",
-       "      <th>Year</th>\n",
+       "      <th>Continent</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Continent</th>\n",
+       "      <th>Year</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -371,81 +251,180 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Africas</th>\n",
-       "      <td>348</td>\n",
-       "      <td>348</td>\n",
-       "      <td>348</td>\n",
-       "      <td>348</td>\n",
-       "      <td>314</td>\n",
-       "      <td>346</td>\n",
-       "      <td>348</td>\n",
+       "      <th>2005</th>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Americas</th>\n",
-       "      <td>851</td>\n",
-       "      <td>851</td>\n",
-       "      <td>851</td>\n",
-       "      <td>851</td>\n",
-       "      <td>787</td>\n",
-       "      <td>851</td>\n",
-       "      <td>851</td>\n",
+       "      <th>2006</th>\n",
+       "      <td>818</td>\n",
+       "      <td>818</td>\n",
+       "      <td>818</td>\n",
+       "      <td>814</td>\n",
+       "      <td>818</td>\n",
+       "      <td>818</td>\n",
+       "      <td>818</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Asia</th>\n",
-       "      <td>840</td>\n",
-       "      <td>840</td>\n",
-       "      <td>840</td>\n",
-       "      <td>840</td>\n",
-       "      <td>777</td>\n",
-       "      <td>840</td>\n",
-       "      <td>840</td>\n",
+       "      <th>2007</th>\n",
+       "      <td>749</td>\n",
+       "      <td>749</td>\n",
+       "      <td>749</td>\n",
+       "      <td>749</td>\n",
+       "      <td>749</td>\n",
+       "      <td>749</td>\n",
+       "      <td>749</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Europe</th>\n",
-       "      <td>5708</td>\n",
-       "      <td>5708</td>\n",
-       "      <td>5708</td>\n",
-       "      <td>5708</td>\n",
-       "      <td>5583</td>\n",
-       "      <td>5708</td>\n",
-       "      <td>5708</td>\n",
+       "      <th>2008</th>\n",
+       "      <td>50</td>\n",
+       "      <td>50</td>\n",
+       "      <td>50</td>\n",
+       "      <td>50</td>\n",
+       "      <td>50</td>\n",
+       "      <td>50</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Oceania</th>\n",
-       "      <td>221</td>\n",
-       "      <td>221</td>\n",
-       "      <td>221</td>\n",
-       "      <td>221</td>\n",
-       "      <td>206</td>\n",
-       "      <td>221</td>\n",
-       "      <td>221</td>\n",
+       "      <th>2009</th>\n",
+       "      <td>554</td>\n",
+       "      <td>554</td>\n",
+       "      <td>554</td>\n",
+       "      <td>554</td>\n",
+       "      <td>554</td>\n",
+       "      <td>554</td>\n",
+       "      <td>554</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Stateless</th>\n",
-       "      <td>17</td>\n",
-       "      <td>17</td>\n",
-       "      <td>17</td>\n",
-       "      <td>13</td>\n",
-       "      <td>16</td>\n",
-       "      <td>17</td>\n",
-       "      <td>17</td>\n",
+       "      <th>2010</th>\n",
+       "      <td>529</td>\n",
+       "      <td>529</td>\n",
+       "      <td>529</td>\n",
+       "      <td>529</td>\n",
+       "      <td>529</td>\n",
+       "      <td>529</td>\n",
+       "      <td>529</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011</th>\n",
+       "      <td>525</td>\n",
+       "      <td>525</td>\n",
+       "      <td>525</td>\n",
+       "      <td>525</td>\n",
+       "      <td>523</td>\n",
+       "      <td>525</td>\n",
+       "      <td>525</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012</th>\n",
+       "      <td>42</td>\n",
+       "      <td>42</td>\n",
+       "      <td>42</td>\n",
+       "      <td>42</td>\n",
+       "      <td>42</td>\n",
+       "      <td>42</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013</th>\n",
+       "      <td>662</td>\n",
+       "      <td>662</td>\n",
+       "      <td>662</td>\n",
+       "      <td>662</td>\n",
+       "      <td>662</td>\n",
+       "      <td>662</td>\n",
+       "      <td>662</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014</th>\n",
+       "      <td>657</td>\n",
+       "      <td>657</td>\n",
+       "      <td>657</td>\n",
+       "      <td>657</td>\n",
+       "      <td>656</td>\n",
+       "      <td>657</td>\n",
+       "      <td>657</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015</th>\n",
+       "      <td>672</td>\n",
+       "      <td>672</td>\n",
+       "      <td>672</td>\n",
+       "      <td>672</td>\n",
+       "      <td>668</td>\n",
+       "      <td>672</td>\n",
+       "      <td>672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016</th>\n",
+       "      <td>652</td>\n",
+       "      <td>652</td>\n",
+       "      <td>652</td>\n",
+       "      <td>652</td>\n",
+       "      <td>652</td>\n",
+       "      <td>652</td>\n",
+       "      <td>652</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017</th>\n",
+       "      <td>743</td>\n",
+       "      <td>743</td>\n",
+       "      <td>743</td>\n",
+       "      <td>743</td>\n",
+       "      <td>635</td>\n",
+       "      <td>743</td>\n",
+       "      <td>743</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018</th>\n",
+       "      <td>759</td>\n",
+       "      <td>759</td>\n",
+       "      <td>759</td>\n",
+       "      <td>759</td>\n",
+       "      <td>623</td>\n",
+       "      <td>757</td>\n",
+       "      <td>759</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019</th>\n",
+       "      <td>551</td>\n",
+       "      <td>551</td>\n",
+       "      <td>551</td>\n",
+       "      <td>551</td>\n",
+       "      <td>500</td>\n",
+       "      <td>551</td>\n",
+       "      <td>551</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           Date From  Date To  Name  Country  Category  Class  Year\n",
-       "Continent                                                          \n",
-       "Africas          348      348   348      348       314    346   348\n",
-       "Americas         851      851   851      851       787    851   851\n",
-       "Asia             840      840   840      840       777    840   840\n",
-       "Europe          5708     5708  5708     5708      5583   5708  5708\n",
-       "Oceania          221      221   221      221       206    221   221\n",
-       "Stateless         17       17    17       13        16     17    17"
+       "      Date From  Date To  Name  Country  Category  Class  Continent\n",
+       "Year                                                               \n",
+       "2005         22       22    22       22        22     22         22\n",
+       "2006        818      818   818      814       818    818        818\n",
+       "2007        749      749   749      749       749    749        749\n",
+       "2008         50       50    50       50        50     50         50\n",
+       "2009        554      554   554      554       554    554        554\n",
+       "2010        529      529   529      529       529    529        529\n",
+       "2011        525      525   525      525       523    525        525\n",
+       "2012         42       42    42       42        42     42         42\n",
+       "2013        662      662   662      662       662    662        662\n",
+       "2014        657      657   657      657       656    657        657\n",
+       "2015        672      672   672      672       668    672        672\n",
+       "2016        652      652   652      652       652    652        652\n",
+       "2017        743      743   743      743       635    743        743\n",
+       "2018        759      759   759      759       623    757        759\n",
+       "2019        551      551   551      551       500    551        551"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,8 +440,35 @@
     "all_data['Continent'] = all_data['Country'].map(cont_dict_converted).fillna('Stateless')\n",
     "\n",
     "#Look at the numbers of races per continent\n",
-    "grouped_df = all_data.groupby('Continent')\n",
+    "grouped_df = all_data.groupby('Year')\n",
     "grouped_df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Continent\n",
+       "Africas      348\n",
+       "Americas     851\n",
+       "Asia         840\n",
+       "Europe      5708\n",
+       "Oceania      221\n",
+       "Name: Name, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conti_count = grouped_df[\"Name\"].count()\n",
+    "conti_count.head()"
    ]
   },
   {
