length of stage races added

--- a/UCI_Races_Analysis.ipynb
+++ b/UCI_Races_Analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "array([2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "4      Asia  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6198,6 +6198,56 @@
    ],
    "source": [
     "data.to_csv('country_year_class_category.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Category  Season\n",
+       "ME        2006      6.651163\n",
+       "          2007      6.572917\n",
+       "          2008      6.391753\n",
+       "          2009      6.134021\n",
+       "          2010      6.071429\n",
+       "          2011      5.785714\n",
+       "          2012      5.987952\n",
+       "          2013      5.513158\n",
+       "          2014      5.481481\n",
+       "          2015      5.068182\n",
+       "          2016      5.142857\n",
+       "          2017      5.118421\n",
+       "          2018      5.064103\n",
+       "          2019      4.880000\n",
+       "WE        2006      4.214286\n",
+       "          2007      4.500000\n",
+       "          2008      4.550000\n",
+       "          2009      4.153846\n",
+       "          2010      4.625000\n",
+       "          2011      4.300000\n",
+       "          2012      4.076923\n",
+       "          2013      4.307692\n",
+       "          2014      4.000000\n",
+       "          2015      4.000000\n",
+       "          2016      3.650000\n",
+       "          2017      4.333333\n",
+       "          2018      3.857143\n",
+       "          2019      3.375000\n",
+       "Name: Race_Days, dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stage_races = df.loc[df['Class']=='2.2']\n",
+    "stage_races.groupby(['Category','Season'])['Race_Days'].mean()"
    ]
   },
   {
